[gd_scene load_steps=14 format=3 uid="uid://chvfx02q5en8n"]

[ext_resource type="Script" path="res://scripts/shop_item_info_panel.gd" id="1_1fs6e"]
[ext_resource type="Texture2D" uid="uid://07i2gv2xuy5e" path="res://Assets/Sprites/UISprites/SmallPotFrame.png" id="1_itg2h"]
[ext_resource type="Texture2D" uid="uid://tl8dokn4iq6k" path="res://Assets/Sprites/UISprites/MediumPotFrame.png" id="2_kjpgm"]
[ext_resource type="Texture2D" uid="uid://dhhnekih3nxyk" path="res://Assets/Sprites/UISprites/BonsaiPotFrame.png" id="3_s18s2"]
[ext_resource type="Texture2D" uid="uid://dx8vy3bauf7i3" path="res://Assets/Sprites/UISprites/MysterySeedFrame.png" id="4_eh4es"]
[ext_resource type="FontFile" uid="uid://ddl4w61y7kd01" path="res://Assets/Fonts/m3x6.ttf" id="5_1bl3c"]
[ext_resource type="Texture2D" uid="uid://52ux1jdj28g" path="res://Assets/Sprites/UISprites/GoldSymbol.png" id="5_ft6g3"]
[ext_resource type="FontFile" uid="uid://k6go1cdoy2dc" path="res://Assets/Fonts/Kenney Mini.ttf" id="6_remen"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jekbe"]
atlas = ExtResource("1_itg2h")
region = Rect2(0, 0, 40, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pvg2"]
atlas = ExtResource("2_kjpgm")
region = Rect2(0, 0, 52, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_1givw"]
atlas = ExtResource("3_s18s2")
region = Rect2(0, 0, 48, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jmoe"]
atlas = ExtResource("4_eh4es")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ckpdq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jekbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pvg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1givw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jmoe")
}],
"loop": false,
"name": &"ShopItems",
"speed": 0.0
}]

[node name="ShopItemInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 7.0
offset_bottom = 3.0
script = ExtResource("1_1fs6e")

[node name="ShopItemSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(37, 19)
sprite_frames = SubResource("SpriteFrames_ckpdq")
animation = &"ShopItems"
autoplay = "ShopItems"

[node name="NameLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 68.0
offset_top = -2.0
offset_right = 169.0
offset_bottom = 22.0
theme_override_fonts/normal_font = ExtResource("5_1bl3c")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Name"
scroll_active = false
autowrap_mode = 0

[node name="DescriptionLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 26.0
offset_right = 168.0
offset_bottom = 81.0
theme_override_fonts/normal_font = ExtResource("5_1bl3c")
theme_override_font_sizes/normal_font_size = 16
text = "Grows seeds with small roots"

[node name="CostLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 21.0
offset_right = 78.0
offset_bottom = 45.0
theme_override_fonts/normal_font = ExtResource("6_remen")
text = "5"

[node name="GoldSprite" type="Sprite2D" parent="."]
position = Vector2(24, 33)
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_ft6g3")
